[gd_scene load_steps=15 format=3 uid="uid://bus0vuibkftgc"]

[ext_resource type="Script" path="res://RollResultScript.gd" id="1_3iid1"]
[ext_resource type="Script" path="res://RollTypeScript.gd" id="1_7wkmp"]
[ext_resource type="Texture2D" uid="uid://bjacpg2w1ja3t" path="res://kostki.svg" id="1_qcuo8"]
[ext_resource type="Script" path="res://DiceSpriteScript.gd" id="2_gfphc"]
[ext_resource type="Script" path="res://DiceMenuScript.gd" id="3_cny4i"]
[ext_resource type="Theme" uid="uid://dxrt7uxn6lnb3" path="res://MainTheme.tres" id="3_w3ca8"]
[ext_resource type="AudioStream" uid="uid://bnmy3qxiu4ova" path="res://rollSnd.wav" id="7_d6116"]

[sub_resource type="LabelSettings" id="LabelSettings_mwd00"]
font_size = 30

[sub_resource type="LabelSettings" id="LabelSettings_mtlg6"]
font_size = 32
font_color = Color(0.592157, 0.592157, 0.592157, 1)
outline_color = Color(0, 0, 0, 1)
shadow_size = 5
shadow_color = Color(0, 0, 0, 0.776471)

[sub_resource type="Gradient" id="Gradient_1fwfn"]
offsets = PackedFloat32Array(0.579151, 1)
colors = PackedColorArray(0.868726, 0.868726, 0.868726, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_36mar"]
gradient = SubResource("Gradient_1fwfn")

[sub_resource type="Curve" id="Curve_5j8ua"]
_data = [Vector2(0.00689656, 0.0210526), 0.0, 0.0, 0, 0, Vector2(1, 0.4), -0.143992, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_x170a"]
curve = SubResource("Curve_5j8ua")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_f83uk"]
lifetime_randomness = 0.13
emission_shape = 3
emission_box_extents = Vector3(100, 90, 1)
particle_flag_disable_z = true
spread = 100.03
gravity = Vector3(15, 35, 0)
initial_velocity_max = 6.37
angular_velocity_min = -165.1
angular_velocity_max = 55.03
orbit_velocity_min = 0.0
orbit_velocity_max = 0.0
linear_accel_min = -20.38
linear_accel_max = -20.38
damping_min = 1.911
damping_max = 9.554
scale_min = 6.37
scale_max = 51.96
scale_curve = SubResource("CurveTexture_x170a")
color = Color(0.882353, 0.901961, 1, 0.254902)
color_ramp = SubResource("GradientTexture1D_36mar")
turbulence_noise_strength = 2.53
turbulence_influence_max = 0.24

[node name="MainScene" type="Node2D"]
metadata/_edit_vertical_guides_ = [400.0]
metadata/_edit_horizontal_guides_ = [300.0]

[node name="Polygon2D" type="Polygon2D" parent="."]
color = Color(0.0313726, 0.0823529, 0.12549, 1)
polygon = PackedVector2Array(0, 0, 800, 0, 800, 600, 0, 600)

[node name="DiceSprite" type="Sprite2D" parent="."]
position = Vector2(403, 432)
scale = Vector2(0.735831, 0.735831)
texture = ExtResource("1_qcuo8")
region_enabled = true
region_rect = Rect2(514, 317, 250, 300)
script = ExtResource("2_gfphc")

[node name="RollType" type="Label" parent="."]
offset_left = 317.0
offset_top = 279.0
offset_right = 486.0
offset_bottom = 324.0
text = "Rolling d20"
label_settings = SubResource("LabelSettings_mwd00")
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("1_7wkmp")

[node name="RollResult" type="Label" parent="."]
offset_left = 316.0
offset_top = 406.0
offset_right = 485.0
offset_bottom = 454.0
text = "--"
label_settings = SubResource("LabelSettings_mtlg6")
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("1_3iid1")

[node name="RollButton" type="Button" parent="."]
offset_left = 296.0
offset_top = 208.0
offset_right = 504.0
offset_bottom = 264.0
theme = ExtResource("3_w3ca8")
text = "Roll"

[node name="DiceType" type="Label" parent="."]
offset_left = 11.0
offset_top = 13.0
offset_right = 126.0
offset_bottom = 51.0
theme_override_font_sizes/font_size = 25
text = "Dice type"
vertical_alignment = 1

[node name="DiceMenu" type="OptionButton" parent="."]
offset_left = 13.0
offset_top = 56.0
offset_right = 77.0
offset_bottom = 92.0
theme = ExtResource("3_w3ca8")
theme_override_font_sizes/font_size = 16
script = ExtResource("3_cny4i")

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
position = Vector2(400, 304)
scale = Vector2(4, 3.09011)
amount = 60
process_material = SubResource("ParticleProcessMaterial_f83uk")
lifetime = 3.0

[node name="DiceRollSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_d6116")
pitch_scale = 1.9
max_polyphony = 6

[connection signal="pressed" from="RollButton" to="RollResult" method="_on_roll_button_pressed"]
